internal/queryfile/testdata/invalid/text_before_annotation.cypher
MATCH (p:Person) RETURN p
// name: OrphanedText :many
MATCH (p:Person) RETURN p
